[gd_scene load_steps=28 format=3 uid="uid://bj6cuypwobx5w"]

[ext_resource type="Texture2D" uid="uid://b1ib4c1cw82hw" path="res://Assets/Spells/Fireball.png" id="1_n4l6o"]
[ext_resource type="Script" path="res://Scripts/Spells/Fireball.gd" id="2_hgju5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kdagv"]
atlas = ExtResource("1_n4l6o")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6iml"]
atlas = ExtResource("1_n4l6o")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i720w"]
atlas = ExtResource("1_n4l6o")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqu78"]
atlas = ExtResource("1_n4l6o")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq31p"]
atlas = ExtResource("1_n4l6o")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi2mb"]
atlas = ExtResource("1_n4l6o")
region = Rect2(768, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y4wd"]
atlas = ExtResource("1_n4l6o")
region = Rect2(800, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v0t3"]
atlas = ExtResource("1_n4l6o")
region = Rect2(832, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbefk"]
atlas = ExtResource("1_n4l6o")
region = Rect2(864, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etg2i"]
atlas = ExtResource("1_n4l6o")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h57ne"]
atlas = ExtResource("1_n4l6o")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmvbn"]
atlas = ExtResource("1_n4l6o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkysb"]
atlas = ExtResource("1_n4l6o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m74mn"]
atlas = ExtResource("1_n4l6o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_du7lq"]
atlas = ExtResource("1_n4l6o")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xj8q"]
atlas = ExtResource("1_n4l6o")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2bje"]
atlas = ExtResource("1_n4l6o")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7uwf"]
atlas = ExtResource("1_n4l6o")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_100d0"]
atlas = ExtResource("1_n4l6o")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2gc7"]
atlas = ExtResource("1_n4l6o")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bneg"]
atlas = ExtResource("1_n4l6o")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx6lp"]
atlas = ExtResource("1_n4l6o")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8exan"]
atlas = ExtResource("1_n4l6o")
region = Rect2(416, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1axv1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdagv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6iml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i720w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqu78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq31p")
}],
"loop": false,
"name": &"Fire",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi2mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y4wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v0t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbefk")
}],
"loop": false,
"name": &"Hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_etg2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h57ne")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmvbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkysb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m74mn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du7lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xj8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2bje")
}],
"loop": true,
"name": &"Move",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7uwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_100d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2gc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bneg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx6lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8exan")
}],
"loop": false,
"name": &"Spawn",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ijl6h"]

[node name="Fireball" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_1axv1")
animation = &"Hit"
autoplay = "Spawn"
frame = 3
frame_progress = 1.0
script = ExtResource("2_hgju5")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 0)
shape = SubResource("CircleShape2D_ijl6h")

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="fire" from="." to="." method="_on_fire"]
[connection signal="idle" from="." to="." method="_on_idle"]
